--- a/form_template.html
+++ b/form_template.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="imgs/email.png"/>
   <title>Sample Form - Template</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
