--- a/form_template.html
+++ b/form_template.html
@@ -27,7 +27,7 @@
     <input type="tel" id="number" name="number" placeholder="123-456-7890">
     <div><span>Format: 123-456-7890</span></div>
 
-    <label for="fav_color">Your Favorite Color:</label>
+    <label for="fav_color">Favorite color:</label>
     <input type="color" id="fav_color" name="fav_color">
 
     <label for="bday">Your Birthday:</label>
